--- a/EFC2.0/EFC2.csproj
+++ b/EFC2.0/EFC2.csproj
@@ -21,4 +21,10 @@
     <Folder Include="Pages\self_service\performance\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
+  </ItemGroup>
+
 </Project>
